--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,12 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/tasksFragment">
+    app:startDestination="@id/articlesFragment">
 
     <fragment
-        android:id="@+id/tasksFragment"
-        android:name="com.codinginflow.mvvmtodo.ui.tasks.TasksFragment"
-        android:label="Tasks"
+        android:id="@+id/articlesFragment"
+        android:name="com.ahmedfathy.articles.ui.Articles.ArticlesFragment"
+        android:label="New York Articles"
         tools:layout="@layout/fragment_tasks">
         <action
             android:id="@+id/action_tasksFragment_to_addEditTaskFragment"
@@ -16,21 +16,16 @@
     </fragment>
     <fragment
         android:id="@+id/addEditTaskFragment"
-        android:name="com.codinginflow.mvvmtodo.ui.addedittask.AddEditTaskFragment"
+        android:name="com.ahmedfathy.articles.ui.addedittask.AddEditTaskFragment"
         android:label="{title}"
         tools:layout="@layout/fragment_add_edit_task">
-        <argument
-            android:name="task"
-            android:defaultValue="@null"
-            app:argType="com.codinginflow.mvvmtodo.data.Task"
-            app:nullable="true" />
         <argument
             android:name="title"
             app:argType="string" />
     </fragment>
     <dialog
         android:id="@+id/deleteAllCompletedDialogFragment"
-        android:name="com.codinginflow.mvvmtodo.ui.deleteallcompleted.DeleteAllCompletedDialogFragment"
+        android:name="com.ahmedfathy.articles.ui.deleteallcompleted.DeleteAllCompletedDialogFragment"
         android:label="DeleteAllCompletedDialogFragment" />
     <action
         android:id="@+id/action_global_deleteAllCompletedDialogFragment"
